--- a/about-us.html
+++ b/about-us.html
@@ -43,8 +43,7 @@
             </p>
           </div>
           <div class="about-me-image">
-            <img src="photos/sq-bg-rackley.png" class="splatter-image" />
-            <img src="photos/tajana-sjedi2.png" alt="Tajana">
+            <img src="photos/tajana-konferencija.jpg" alt="Tajana">
           </div>
           <div class="my-story-container">
             <h3 class="my-story-title roboto-light">Moja priča</h3>
@@ -68,7 +67,7 @@
 
       <section class="work-process">
         <div class="work-process-heading">
-          <h3 class="work-process-title roboto-light">Proces suradnje</h3>
+          <h3 class="work-process-title roboto-light">Proces suradnje:</h3>
           <p class="work-process-subtitle roboto-light">
             U svom radu koristim kombinaciju analitičkog pristupa, prilagođenih alata i bogatog iskustva
           </p>
