Services section fix v1, other small fixes

--- a/about-us.html
+++ b/about-us.html
@@ -67,10 +67,11 @@
 
       <section class="work-process">
         <div class="work-process-heading">
+          <div class="work-process-wrapper">
           <h3 class="work-process-title roboto-light">Proces suradnje:</h3>
           <p class="work-process-subtitle roboto-light">
             U svom radu koristim kombinaciju analitičkog pristupa, prilagođenih alata i bogatog iskustva
-          </p>
+          </p></div>
         </div>
         <div class="timeline">
           <div class="timeline-step">
@@ -126,6 +127,9 @@
           </div>
         </div>
       </section>
+
+
+
       <section class="why-us">
         <div class="why-us-wrapper">
           <div class="why-us-container">
