--- a/financijsko.html
+++ b/financijsko.html
@@ -160,7 +160,7 @@
         </div>
       </div>
 
-      <section class="contact-us-section">
+      <section class="contact-us-section reversewhite">
         <div class="contact-us-content">
           <p class="contact-us-text roboto-light">
             Naša kompanija pruža sveobuhvatne usluge financijskog i strateškog
