--- a/index.html
+++ b/index.html
@@ -53,94 +53,45 @@
             </div>
           </div>
           <div class="services-cards-container">
-            <!-- Service Cards -->
-            <a href="financijsko.html" class="service-card-link">
-              <div class="service-card">
-                <div class="service-header">
-                  <div class="service-image-container">
-                    <img
-                      class="service-image"
-                      src="photos/profit.png"
-                      alt="Profit Image"
-                    />
-                  </div>
-                  <h3 class="service-title roboto-light">
-                    Financijsko savjetovanje
-                  </h3>
-                </div>
-                <div class="service-description">
-                  <p class="service-description roboto-light">
-                    Investicijske studije
-                  </p>
-                  <p class="service-description roboto-light">
-                    Financijsko modeliranje
-                  </p>
-                  <p class="service-description roboto-light">
-                    Izdanje obveznica
-                  </p>
-                  <p class="service-description roboto-light">
-                    Upravljanje rizicima
-                  </p>
-                </div>
+            <a href="financijsko.html" class="service-card">
+              <div class="service-card-image">
+                <img src="photos/profit.png" alt="Profit Image" />
+              </div>
+              <div class="service-card-title roboto-light">
+                Financijsko savjetovanje
+              </div>
+              <div class="service-card-description roboto-light">
+                <p>Investicijske studije</p>
+                <p>Financijsko modeliranje</p>
+                <p>Izdanje obveznica</p>
+                <p>Upravljanje rizicima</p>
               </div>
             </a>
-
-            <a href="stratesko.html" class="service-card-link">
-              <div class="service-card">
-                <div class="service-header">
-                  <div class="service-image-container">
-                    <img
-                      class="service-image"
-                      src="photos/strategy.png"
-                      alt="Strategy Image"
-                    />
-                  </div>
-                  <h3 class="service-title roboto-light">
-                    Strateško savjetovanje
-                  </h3>
-                </div>
-                <div class="service-description">
-                  <p class="service-description roboto-light">
-                    Poslovno planiranje
-                  </p>
-                  <p class="service-description roboto-light">
-                    Analiza tržišta i konkurencije
-                  </p>
-                  <p class="service-description roboto-light">
-                    Upravljanje promjenama
-                  </p>
-                  <p class="service-description roboto-light">
-                    Strateško planiranje i operativna optimizacija
-                  </p>
-                </div>
+            <a href="stratesko.html" class="service-card">
+              <div class="service-card-image">
+                <img src="photos/strategy.png" alt="Strategy Image" />
+              </div>
+              <div class="service-card-title roboto-light">
+                Strateško savjetovanje
+              </div>
+              <div class="service-card-description roboto-light">
+                <p>Poslovno planiranje</p>
+                <p>Analiza tržišta i konkurencije</p>
+                <p>Upravljanje promjenama</p>
+                <p>Strateško planiranje i operativna optimizacija</p>
               </div>
             </a>
-
-            <a href="agrobiznis.html" class="service-card-link">
-              <div class="service-card">
-                <div class="service-header">
-                  <div class="service-image-container">
-                    <img
-                      class="service-image"
-                      src="photos/coin.png"
-                      alt="Coin Image"
-                    />
-                  </div>
-                  <h3 class="service-title roboto-light">
-                    Agrobiznis i ruralni razvoj
-                  </h3>
-                </div>
-                <div class="service-description">
-                  <p class="service-description roboto-light">
-                    Poslovno planiranje za agrobiznis
-                  </p>
-                  <p class="service-description roboto-light">
-                    Prijave za fondove (uključujući EU)
-                  </p>
-                  <p class="service-description roboto-light">
-                    Izvoz i međunarodno poslovanje za agrobiznis
-                  </p>
-                </div>
+            <a href="agrobiznis.html" class="service-card">
+              <div class="service-card-image">
+                <img src="photos/coin.png" alt="Coin Image" />
+              </div>
+              <div class="service-card-title roboto-light">
+                Agrobiznis i ruralni razvoj
+              </div>
+              <div class="service-card-description roboto-light">
+                <p>Poslovno planiranje za agrobiznis</p>
+                <p>Prijave za fondove (uključujući EU)</p>
+                <p>Izvoz i međunarodno poslovanje za agrobiznis</p>
               </div>
             </a>
           </div>
