Agrobiznis LAG-ovi fix

--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -180,16 +180,18 @@
       </div>
 
       <div class="development-strategy-section roboto-light">
-        <h2 class="development-strategy-title roboto-light">
-          Izrada razvojnih strategija za LAG-ove, gradove i općine
-        </h2>
-        <p class="development-strategy-text roboto-light">
-          Razvoj ruralnih područja zahtijeva promišljeno planiranje i jasnu
-          viziju budućnosti. Naš tim surađuje s lokalnim akcijskim grupama
-          (LAG-ovima), gradovima i općinama na izradi sveobuhvatnih razvojnih
-          strategija koje potiču održivi razvoj i poboljšanje kvalitete života u
-          ruralnim zajednicama.
-        </p>
+        <div class="development-strategy-header">
+          <h2 class="development-strategy-title roboto-light">
+            Izrada razvojnih strategija za LAG-ove, gradove i općine
+          </h2>
+          <p class="development-strategy-text roboto-light">
+            Razvoj ruralnih područja zahtijeva promišljeno planiranje i jasnu
+            viziju budućnosti. Naš tim surađuje s lokalnim akcijskim grupama
+            (LAG-ovima), gradovima i općinama na izradi sveobuhvatnih razvojnih
+            strategija koje potiču održivi razvoj i poboljšanje kvalitete života
+            u ruralnim zajednicama.
+          </p>
+        </div>
         <div class="development-strategy-container">
           <div class="development-card">
             <img
