--- a/footer.html
+++ b/footer.html
@@ -1,37 +1,57 @@
-<div class="page-footer">
+<footer class="page-footer">
   <div class="footer-content">
+    <!-- Left: Logo/Title -->
     <div class="footer-left">
       <div class="page-title-footer">
-        <a href="index.html" class="roboto-light"
-          >Štriga poslovno savjetovanje</a
-        >
-      </div>
-      <nav class="page-navigation-footer">
-        <a href="o-nama.html" class="roboto-medium">O MENI</a>
-        <a href="projekti.html" class="roboto-medium">USLUGE</a>
-        <a href="blog.html" class="roboto-medium">BLOG</a>
-        <a href="kontakt.html" class="roboto-medium">KONTAKT</a>
-        <a
-          href="https://www.linkedin.com/in/tajanastriga/"
-          class="icon-link"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <svg
-            class="linkedin-icon"
-            height="1.3em"
-            viewBox="0 0 512 512"
-            width="1.3em"
-          >
-            <path
-              d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-386.892,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Zm-288.985,423.278l0,-225.717l-75.04,0l0,225.717l75.04,0Zm270.539,0l0,-129.439c0,-69.333 -37.018,-101.586 -86.381,-101.586c-39.804,0 -57.634,21.891 -67.617,37.266l0,-31.958l-75.021,0c0.995,21.181 0,225.717 0,225.717l75.02,0l0,-126.056c0,-6.748 0.486,-13.492 2.474,-18.315c5.414,-13.475 17.767,-27.434 38.494,-27.434c27.135,0 38.007,20.707 38.007,51.037l0,120.768l75.024,0Zm-307.552,-334.556c-25.674,0 -42.448,16.879 -42.448,39.002c0,21.658 16.264,39.002 41.455,39.002l0.484,0c26.165,0 42.452,-17.344 42.452,-39.002c-0.485,-22.092 -16.241,-38.954 -41.943,-39.002Z"
-              fill="currentColor"
-            />
-          </svg>
+        <a href="index.html" class="roboto-light">
+          Štriga poslovno savjetovanje
         </a>
-      </nav>
+      </div>
     </div>
-    <div class="information-footer">
+    <!-- Center: Navigation -->
+    <nav class="page-navigation-footer" aria-label="Footer Navigation">
+      <div class="footer-nav-columns roboto-light">
+        <div class="footer-nav-col">
+          <a href="about-us.html">O meni</a>
+          <a href="blog-archive.html">Blog</a>
+          <a href="kontakt.html">Kontakt</a>
+          <a
+            href="https://www.linkedin.com/in/tajana-striga/"
+            target="_blank"
+            rel="noopener"
+            class="icon-link"
+            aria-label="LinkedIn"
+          >
+            <svg
+              class="linkedin-in-icon"
+              width="1em"
+              height="1em"
+              viewBox="0 0 32 32"
+              fill="currentColor"
+              style="vertical-align: middle"
+            >
+              <text
+                x="7"
+                y="24"
+                font-family="Arial, Helvetica, sans-serif"
+                font-size="22"
+                font-weight="bold"
+              >
+                in
+              </text>
+            </svg>
+          </a>
+        </div>
+        <div class="footer-nav-col">
+          <a href="financijsko.html">Financijsko savjetovanje</a>
+          <a href="stratesko.html">Strateško savjetovanje</a>
+          <a href="agrobiznis.html">Agrobiznis i održivi razvoj</a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Right: Info and LinkedIn -->
+    <div class="information-footer roboto-light">
       <p>
         OIB: 24689046575<br />
         Osnivač i jedini član: Tajana Štriga<br />
@@ -41,7 +61,8 @@
       </p>
     </div>
   </div>
+  <div class="footer-line"></div>
   <div class="copyright roboto-light">
     <p>© 2018 Štriga poslovno savjetovanje | All Rights Reserved</p>
   </div>
-</div>
+</footer>
