Mobile version, services intro v1, icons

--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -29,7 +29,7 @@
       <div class="agrobiznis-wrapper">
         <div class="content-wrapper">
           <div class="agrobiznis-content">
-            <h2 class="agrobiznis-title roboto-light">
+            <h2 class="agrobiznis-title roboto-light reverse-color">
               Agrobiznis i Održivi Razvoj
             </h2>
             <p class="agrobiznis-text roboto-light">
