--- a/stratesko.html
+++ b/stratesko.html
@@ -38,7 +38,9 @@
             />
           </div>
           <div class="agrobiznis-content">
-            <h2 class="agrobiznis-title roboto-light">Strateško planiranje</h2>
+            <h2 class="agrobiznis-title roboto-light reverse-color">
+              Strateško planiranje
+            </h2>
             <p class="agrobiznis-text roboto-light">
               Razumijemo da su financijsko i strateško planiranje temelji
               uspješnog poslovanja u današnjem dinamičnom i konkurentnom
@@ -61,14 +63,15 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/agro-icons/profits.png"
-                  alt="Financiranje i subvencije"
+                  src="photos/financial.png"
+                  alt="Business planning"
                   class="service-icon"
                 />
                 <h3 class="service-title-service-page roboto-light">
                   Poslovno planiranje i budžetiranje
                 </h3>
               </div>
+
               <p class="service-description-service-page roboto-light">
                 Iskoristite priliku koju nude nacionalni izvori i fondovi
                 Europske unije za financiranje vaših projekata. Imamo bogato
@@ -81,8 +84,8 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/agro-icons/online-shop.png"
-                  alt="Proširenje poslovanja"
+                  src="photos/operation.png"
+                  alt="Strategic planning"
                   class="service-icon"
                 />
                 <h3 class="service-title-service-page roboto-light">
@@ -100,8 +103,8 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/agro-icons/map.png"
-                  alt="Agro-turizam"
+                  src="photos/analysis.png"
+                  alt="Market and competition analysis"
                   class="service-icon"
                 />
                 <h3 class="service-title-service-page roboto-light">
@@ -120,8 +123,8 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/agro-icons/marketing-automation.png"
-                  alt="Marketing strategije"
+                  src="photos/management.png"
+                  alt="Change management and organizational transformation"
                   class="service-icon"
                 />
                 <h3 class="service-title-service-page roboto-light">
@@ -139,8 +142,8 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/agro-icons/presentation.png"
-                  alt="Investicijske studije i poslovni planovi"
+                  src="photos/understand.png"
+                  alt="Mergers and Acquisitions"
                   class="service-icon"
                 />
                 <h3 class="service-title-service-page roboto-light">
