Mobile version test

--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -30,7 +30,7 @@
         <div class="content-wrapper">
           <div class="agrobiznis-content">
             <h2 class="agrobiznis-title roboto-light reverse-color">
-              Agrobiznis i Održivi Razvoj
+              Agrobiznis i Održivi razvoj
             </h2>
             <p class="agrobiznis-text roboto-light">
               Razumijemo da je agrobiznis jedan od ključnih sektora za održivi
@@ -46,7 +46,7 @@
           <div class="agrobiznis-image-container">
             <img
               src="photos/vineyard.jpg"
-              alt="Fotografija ječma"
+              alt="Fotografija vinograda"
               class="agrobiznis-image"
               id="reverse"
             />
