Fix, footer testing

--- a/footer.html
+++ b/footer.html
@@ -1,64 +1,47 @@
 <footer class="page-footer">
   <div class="footer-content">
-    <!-- Left: Logo/Title -->
-    <div class="footer-left">
-      <div class="page-title-footer">
-        <a href="index.html" class="roboto-light">
-          Štriga poslovno savjetovanje
-        </a>
-      </div>
+    <div class="footer-brand">
+      <a href="index.html" class="footer-title roboto-light">
+        Štriga poslovno savjetovanje
+      </a>
     </div>
-    <!-- Center: Navigation -->
-    <nav class="page-navigation-footer" aria-label="Footer Navigation">
-      <div class="footer-nav-columns roboto-light">
-        <div class="footer-nav-col">
-          <a href="about-us.html">O meni</a>
-          <a href="blog-archive.html">Blog</a>
-          <a href="kontakt.html">Kontakt</a>
-          <a
-            href="https://www.linkedin.com/in/tajana-striga/"
-            target="_blank"
-            rel="noopener"
-            class="icon-link"
-            aria-label="LinkedIn"
+    <nav class="footer-nav roboto-light" aria-label="Footer Navigation">
+      <a href="about-us.html">O meni</a>
+      <a href="blog-archive.html">Blog</a>
+      <a href="kontakt.html">Kontakt</a>
+      <a href="financijsko.html">Financijsko savjetovanje</a>
+      <a href="stratesko.html">Strateško savjetovanje</a>
+      <a href="agrobiznis.html">Agrobiznis i održivi razvoj</a>
+      <a
+        href="https://www.linkedin.com/in/tajana-striga/"
+        target="_blank"
+        rel="noopener"
+        class="linkedin-btn"
+        aria-label="LinkedIn"
+      >
+        <svg width="1.2em" height="1.2em" viewBox="0 0 32 32" fill="none">
+          <rect width="32" height="32" rx="8" fill="#0077b5" />
+          <text
+            x="7"
+            y="24"
+            font-family="Arial, Helvetica, sans-serif"
+            font-size="22"
+            font-weight="bold"
+            fill="white"
           >
-            <svg
-              class="linkedin-in-icon"
-              width="1em"
-              height="1em"
-              viewBox="0 0 32 32"
-              fill="currentColor"
-              style="vertical-align: middle"
-            >
-              <text
-                x="7"
-                y="24"
-                font-family="Arial, Helvetica, sans-serif"
-                font-size="22"
-                font-weight="bold"
-              >
-                in
-              </text>
-            </svg>
-          </a>
-        </div>
-        <div class="footer-nav-col">
-          <a href="financijsko.html">Financijsko savjetovanje</a>
-          <a href="stratesko.html">Strateško savjetovanje</a>
-          <a href="agrobiznis.html">Agrobiznis i održivi razvoj</a>
-        </div>
-      </div>
+            in
+          </text>
+        </svg>
+      </a>
     </nav>
-
-    <!-- Right: Info and LinkedIn -->
-    <div class="information-footer roboto-light">
-      <p>
-        OIB: 24689046575<br />
-        Osnivač i jedini član: Tajana Štriga<br />
-        Datum osnivanja: 11.01.2018.<br />
-        Registrirana djelatnost: 7022 - Savjetovanje u vezi s poslovanjem i
-        ostalim upravljanjem
-      </p>
+    <div class="footer-info roboto-light">
+      <span><b>OIB:</b> 24689046575</span>
+      <span><b>Osnivač:</b> Tajana Štriga</span>
+      <span><b>Datum osnivanja:</b> 11.01.2018.</span>
+      <span
+        ><b>Djelatnost:</b> 7022 - Savjetovanje u vezi s poslovanjem i ostalim
+        upravljanjem</span
+      >
     </div>
   </div>
   <div class="footer-line"></div>
