--- a/blog-archive.html
+++ b/blog-archive.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer></footer>
-
+    <div id="cookie-banner-placeholder"></div>
     <script src="app.js"></script>
     <script type="module" src="blog.js"></script>
   </body>
