--- a/footer.html
+++ b/footer.html
@@ -1,40 +1,59 @@
 <footer class="page-footer">
   <div class="footer-content">
-    <div class="footer-brand">
+    <!-- Left: Brand, Policies, LinkedIn -->
+    <div class="footer-col footer-brandpolicies">
       <a href="index.html" class="footer-title roboto-light">
         Štriga poslovno savjetovanje
       </a>
+      <div class="footer-policies-linkedin">
+        <div class="footer-policies roboto-light">
+          <a href="privacy-policy.html">Politika privatnosti</a>
+          <a href="cookie-policy.html">Politika kolačića</a>
+        </div>
+        <a
+          href="https://www.linkedin.com/in/tajana-striga/"
+          target="_blank"
+          rel="noopener"
+          class="linkedin-btn"
+          aria-label="LinkedIn"
+        >
+          <svg width="1.5em" height="1.5em" viewBox="0 0 32 32" fill="none">
+            <text
+              x="16"
+              y="16"
+              text-anchor="middle"
+              dominant-baseline="middle"
+              font-family="Arial, Helvetica, sans-serif"
+              font-size="22"
+              font-weight="bold"
+              fill="white"
+            >
+              in
+            </text>
+          </svg>
+        </a>
+      </div>
     </div>
-    <nav class="footer-nav roboto-light" aria-label="Footer Navigation">
-      <a href="about-us.html">O meni</a>
-      <a href="blog-archive.html">Blog</a>
-      <a href="kontakt.html">Kontakt</a>
-      <a href="financijsko.html">Financijsko savjetovanje</a>
-      <a href="stratesko.html">Strateško savjetovanje</a>
-      <a href="agrobiznis.html">Agrobiznis i održivi razvoj</a>
-      <a
-        href="https://www.linkedin.com/in/tajana-striga/"
-        target="_blank"
-        rel="noopener"
-        class="linkedin-btn"
-        aria-label="LinkedIn"
-      >
-        <svg width="1.2em" height="1.2em" viewBox="0 0 32 32" fill="none">
-          <rect width="32" height="32" rx="8" fill="#0077b5" />
-          <text
-            x="7"
-            y="24"
-            font-family="Arial, Helvetica, sans-serif"
-            font-size="22"
-            font-weight="bold"
-            fill="white"
-          >
-            in
-          </text>
-        </svg>
-      </a>
+    <div class="footer-divider"></div>
+    <!-- Center: Navigation -->
+    <nav
+      class="footer-col footer-nav roboto-light"
+      aria-label="Footer Navigation"
+    >
+      <div class="footer-links-group a">
+        <a href="about-us.html">O meni</a>
+        <a href="blog-archive.html">Blog</a>
+        <a href="kontakt.html">Kontakt</a>
+      </div>
+      <div class="footer-links-group b">
+        <a href="financijsko.html">Financijsko savjetovanje</a>
+        <a href="stratesko.html">Strateško savjetovanje</a>
+        <a href="agrobiznis.html">Agrobiznis i održivi razvoj</a>
+      </div>
     </nav>
-    <div class="footer-info roboto-light">
+    <!-- Right: Info -->
+    <div class="footer-divider"></div>
+    <div class="footer-col footer-info roboto-light">
       <span><b>OIB:</b> 24689046575</span>
       <span><b>Osnivač:</b> Tajana Štriga</span>
       <span><b>Datum osnivanja:</b> 11.01.2018.</span>
