--- a/header.html
+++ b/header.html
@@ -6,7 +6,9 @@
       </a>
     </div>
     <nav class="page-navigation" id="page-navigation">
-      <a href="about-us.html"><h3 class="roboto-medium">O MENI</h3></a>
+      <a href="about-us.html"
+        ><h3 class="roboto-medium" id="usluge-link">O MENI</h3></a
+      >
 
       <div class="dropdown">
         <a href="usluge.html">
