--- a/kontakt.html
+++ b/kontakt.html
@@ -84,7 +84,7 @@
       </div>
     </main>
     <footer></footer>
-
+    <div id="cookie-banner-placeholder"></div>
     <script src="app.js"></script>
     <script
       type="text/javascript"
