--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -81,6 +81,7 @@
         </div>
       </section>
     </main>
+    <div id="cookie-banner-placeholder"></div>
     <script src="app.js"></script>
     <script type="module" src="blog.js"></script>
   </body>
