--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -66,6 +66,7 @@
         </div>
       </section>
     </main>
+    <div id="cookie-banner-placeholder"></div>
     <script src="app.js"></script>
     <script type="module" src="blog.js"></script>
   </body>
