--- a/financijsko.html
+++ b/financijsko.html
@@ -175,7 +175,7 @@
     </main>
 
     <footer></footer>
-
+    <div id="cookie-banner-placeholder"></div>
     <script src="app.js"></script>
   </body>
 </html>
