--- a/index.html
+++ b/index.html
@@ -156,41 +156,7 @@
     </main>
 
     <footer></footer>
-
-    <!-- Cookie Consent Banner -->
-    <div id="cookie-consent-banner" style="display: none">
-      <div class="banner-content">
-        <p>
-          Koristimo kolačiće za analizu prometa i poboljšanje korisničkog
-          iskustva.
-          <a href="privacy-policy.html">Politika privatnosti</a> |
-          <a href="cookie-policy.html">Politika kolačića</a>
-        </p>
-        <div class="buttons">
-          <button id="reject-cookies">Odbij sve osim nužnih</button>
-          <button id="customize-cookies">Prilagodi</button>
-          <button id="accept-cookies">Prihvati sve</button>
-        </div>
-      </div>
-
-      <!-- Customization Modal -->
-      <div id="cookie-settings" style="display: none">
-        <h4>Postavke kolačića</h4>
-        <div class="cookie-category">
-          <label>
-            <input type="checkbox" disabled checked />
-            Nužni kolačići <i>(Uvijek aktivni)</i>
-          </label>
-        </div>
-        <div class="cookie-category">
-          <label>
-            <input type="checkbox" id="analytics-cookies" />
-            Analitički kolačići (Google Analytics)
-          </label>
-        </div>
-        <button id="save-preferences">Spremi postavke</button>
-      </div>
-    </div>
+    <div id="cookie-banner-placeholder"></div>
 
     <script src="app.js"></script>
     <script type="module" src="blog.js"></script>
