--- a/single-blog.html
+++ b/single-blog.html
@@ -34,7 +34,7 @@
     </main>
 
     <footer></footer>
-
+    <div id="cookie-banner-placeholder"></div>
     <script src="app.js"></script>
     <script type="module" src="blog.js"></script>
   </body>
