--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
           <a href="cookie-policy.html">Politika kolačića</a>
         </div>
         <a
-          href="https://www.linkedin.com/in/tajana-striga/"
+          href="https://www.linkedin.com/in/tajanastriga/?originalSubdomain=hr"
           target="_blank"
           rel="noopener"
           class="linkedin-btn"
