--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </section>
 
       <section id="latest-blogs">
-        <div class="blog-header">
+        <div class="blog-header-home">
           <h2 class="latest-blogs-title roboto-light">
             Zadnje analize i istraživanja
           </h2>
