--- a/financijsko.html
+++ b/financijsko.html
@@ -67,11 +67,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Iskoristite priliku koju nude nacionalni izvori i fondovi
-                Europske unije za financiranje vaših projekata. Imamo bogato
-                iskustvo u pisanju projekata i pripremi dokumentacije za EU
-                natječaje. Pratimo vas kroz cijeli proces, od početnog koncepta
-                do konačne prijave.
+                Donosite informirane odluke uz detaljno razrađene investicijske
+                studije. Izrađujemo stručne analize isplativosti koje uključuju
+                procjenu troškova, očekivanih prihoda, rizika i povrata
+                ulaganja. Naši izvještaji pružaju jasnu sliku održivosti vašeg
+                projekta i podršku pri donošenju ključnih poslovnih odluka ili
+                apliciranju za financiranje.
               </p>
             </div>
 
@@ -87,10 +88,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Vaša tvrtka je spremna za širenje, ali potrebna vam je stručna
-                podrška? Razvijamo strategije širenja poslovanja koje uključuju
-                analizu potencijalnih tržišta, razradu marketinških planova i
-                savjete za optimizaciju poslovanja.
+                Planirajte budućnost svog poslovanja na temelju pouzdanih
+                financijskih modela. Razrađujemo financijske projekcije koje
+                uključuju prihode, rashode, novčani tok i profitabilnost kako
+                biste mogli donijeti kvalitetne strateške odluke. Naši modeli
+                prilagođeni su vašem poslovanju i pomažu u simulaciji različitih
+                scenarija i pripremi za neizvjesnosti tržišta.
               </p>
             </div>
 
@@ -102,11 +105,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Ako razmišljate o proširenju poslovanja kroz agro-turizam ili
-                druge oblike dopunskih aktivnosti, mi smo ovdje da vam pomognemo
-                u razvoju održivih poslovnih modela. Savjetujemo vas o
-                mogućnostima plasiranja proizvoda direktno potrošačima ili
-                razvoju turističkih sadržaja na vašim imanjima.
+                Tražite alternativni izvor financiranja za širenje poslovanja?
+                Pružamo savjetovanje i vođenje kompletnog procesa izdavanja
+                obveznica putem privatnog plasmana do 8 milijuna eura. Od izrade
+                strategije i dokumentacije, do povezivanja s potencijalnim
+                investitorima – osiguravamo stručnu podršku na svakom koraku
+                kako biste sigurno i učinkovito realizirali svoju investiciju.
               </p>
             </div>
 
@@ -122,11 +126,13 @@
                 </h3>
 
                 <p class="service-description-service-page roboto-light">
-                  U konkurentnom tržištu poljoprivrednih i prehrambenih
-                  proizvoda, snažna marketinška strategija može biti ključna za
-                  uspjeh. Naš tim vam pomaže u izradi marketinških planova koji
-                  uključuju brendiranje, pakiranje, promociju i plasman vaših
-                  proizvoda.
+                  Prepoznajte, procijenite i umanjite poslovne rizike prije nego
+                  što postanu prijetnja. Nudimo sveobuhvatnu podršku u
+                  identifikaciji operativnih, financijskih i tržišnih rizika,
+                  kao i u razvoju strategija za njihovo učinkovito upravljanje.
+                  Naš pristup temelji se na analizi podataka, prilagodbi
+                  specifičnostima vašeg poslovanja i izgradnji otpornosti u
+                  neizvjesnom okruženju.
                 </p>
               </div>
             </div>
@@ -143,11 +149,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Pomažemo vam kreirati čvrste temelje za buduće investicije. Bez
-                obzira na veličinu vašeg projekta, detaljno analiziramo sve
-                aspekte ulaganja, od tržišnih prilika do procjene rizika, kako
-                biste donijeli informirane odluke koje će osigurati rast vašeg
-                poslovanja.
+                Planirate spajanje, preuzimanje ili prodaju poduzeća? Pružamo
+                strateško i operativno savjetovanje kroz cijeli M&amp;A proces –
+                od identifikacije ciljeva i procjene vrijednosti, do pregovora,
+                strukturiranja transakcije i zaključenja posla. Naš pristup
+                osigurava diskreciju, pravnu i financijsku usklađenost te
+                maksimizaciju vrijednosti za sve uključene strane.
               </p>
             </div>
           </div>
