--- a/stratesko.html
+++ b/stratesko.html
@@ -73,11 +73,12 @@
               </div>
 
               <p class="service-description-service-page roboto-light">
-                Iskoristite priliku koju nude nacionalni izvori i fondovi
-                Europske unije za financiranje vaših projekata. Imamo bogato
-                iskustvo u pisanju projekata i pripremi dokumentacije za EU
-                natječaje. Pratimo vas kroz cijeli proces, od početnog koncepta
-                do konačne prijave.
+                Izradite jasne i realne poslovne planove koji usmjeravaju rast i
+                razvoj vašeg poduzeća. Pomažemo u kreiranju detaljnih
+                strategija, postavljanju ciljeva i izradi budžeta koji prati sve
+                ključne aspekte poslovanja. Naši alati i metode omogućuju vam
+                bolje upravljanje resursima i pravovremenu kontrolu financijskih
+                rezultata.
               </p>
             </div>
 
@@ -93,10 +94,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Vaša tvrtka je spremna za širenje, ali potrebna vam je stručna
-                podrška? Razvijamo strategije širenja poslovanja koje uključuju
-                analizu potencijalnih tržišta, razradu marketinških planova i
-                savjete za optimizaciju poslovanja.
+                Razvijte dugoročne strategije koje će osigurati održiv rast i
+                konkurentnost vašeg poslovanja. Pomažemo u definiranju poslovnih
+                ciljeva, analizama tržišta i konkurencije te uvođenju
+                učinkovitih operativnih procesa. Optimizirajte resurse i
+                poboljšajte interne procese kako biste povećali produktivnost i
+                smanjili troškove.
               </p>
             </div>
 
@@ -112,11 +115,11 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Ako razmišljate o proširenju poslovanja kroz agro-turizam ili
-                druge oblike dopunskih aktivnosti, mi smo ovdje da vam pomognemo
-                u razvoju održivih poslovnih modela. Savjetujemo vas o
-                mogućnostima plasiranja proizvoda direktno potrošačima ili
-                razvoju turističkih sadržaja na vašim imanjima.
+                Dobijte precizan uvid u tržišne prilike i konkurentsko
+                okruženje. Provedemo detaljne analize tržišta, identificiramo
+                ključne trendove, profile kupaca i glavne konkurente. Na temelju
+                prikupljenih podataka pomažemo vam u donošenju strateških odluka
+                i prilagođavanju ponude za maksimalan uspjeh.
               </p>
             </div>
 
@@ -132,10 +135,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                U konkurentnom tržištu poljoprivrednih i prehrambenih proizvoda,
-                snažna marketinška strategija može biti ključna za uspjeh. Naš
-                tim vam pomaže u izradi marketinških planova koji uključuju
-                brendiranje, pakiranje, promociju i plasman vaših proizvoda.
+                Podržavamo vašu tvrtku u uspješnoj implementaciji promjena i
+                organizacijskim transformacijama. Pomažemo u planiranju,
+                komunikaciji i angažiranju zaposlenika kako bi prijelaz bio što
+                učinkovitiji i bez nepotrebnih zastoja. Naš cilj je osigurati
+                trajne rezultate i prilagodbu poslovanja novim izazovima i
+                prilikama.
               </p>
             </div>
 
@@ -151,11 +156,12 @@
                 </h3>
               </div>
               <p class="service-description-service-page roboto-light">
-                Pomažemo vam kreirati čvrste temelje za buduće investicije. Bez
-                obzira na veličinu vašeg projekta, detaljno analiziramo sve
-                aspekte ulaganja, od tržišnih prilika do procjene rizika, kako
-                biste donijeli informirane odluke koje će osigurati rast vašeg
-                poslovanja.
+                Planirate spajanje, preuzimanje ili prodaju poduzeća? Pružamo
+                strateško i operativno savjetovanje kroz cijeli M&amp;A proces –
+                od identifikacije ciljeva i procjene vrijednosti, do pregovora,
+                strukturiranja transakcije i zaključenja posla. Naš pristup
+                osigurava diskreciju, pravnu i financijsku usklađenost te
+                maksimizaciju vrijednosti za sve uključene strane.
               </p>
             </div>
           </div>
