--- a/footer.html
+++ b/footer.html
@@ -41,7 +41,7 @@
       aria-label="Footer Navigation"
     >
       <div class="footer-links-group a">
-        <a href="about-us.html">O meni</a>
+        <a href="o-meni.html">O meni</a>
         <a href="blog-archive.html">Blog</a>
         <a href="kontakt.html">Kontakt</a>
       </div>
