--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <nav class="page-navigation" id="page-navigation">
-      <a href="about-us.html"
+      <a href="o-nama.html"
         ><h3 class="roboto-medium" id="usluge-link">O MENI</h3></a
       >
 
