--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Leonardo Štriga" />
+    <meta
+      name="description"
+      content="Stručni financijski i poslovni savjeti za poduzeća i obrte u Hrvatskoj. Poslovno savjetovanje, financijsko planiranje i strateški razvoj."
+    />
+    <meta
+      name="keywords"
+      content="financijsko savjetovanje, poslovno savjetovanje, strateško savjetovanje, Zagreb, Hrvatska, obveznice, EU, poticaji, financijski blog"
+    />
+    <meta property="og:title" content="Štriga poslovno savjetovanje" />
+    <meta
+      property="og:description"
+      content="Financijski i poslovni savjeti za poduzeća i obrte u Hrvatskoj."
+    />
+    <meta
+      property="og:image"
+      content="https://striga-savjetovanje.com/images/og-image.jpg"
+    />
+    <meta property="og:url" content="https://striga-savjetovanje.com/" />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="indexCSS/page-header.css" />
     <link rel="stylesheet" href="indexCSS/font.css" />
     <link rel="stylesheet" href="indexCSS/page-footer.css" />
@@ -117,7 +138,7 @@
               rast, širenje i dugoročni uspjeh.
             </p>
           </div>
-          <a class="profile-a roboto-light shake-top" href="about-us.html"
+          <a class="profile-a roboto-light shake-top" href="o-nama.html"
             >Saznajte više
           </a>
         </div>
