--- a/kontakt.html
+++ b/kontakt.html
@@ -43,7 +43,7 @@
                 />
               </svg>
             </span>
-            hello@loremipsum.com
+            tajana@striga-savjetovanje.com
           </p>
         </div>
 
